Add Clr Btn, Basic functionality
- Comma can only be pressed once
- Display is showing correct numbers
- Operator doesn't change if numTwo exists

TO-DO

- Create operate(numTwo,numTwo,operator)
- Limit characters allowed onscreen

--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
   <body>
     <div class="container">
       <div class="display"></div>
+      <button class="btns clr-btn" id="clear">CLEAR</button>
       <div class="btns-container">
         <button class="btns dig-btns" id="7">7</button>
         <button class="btns dig-btns" id="8">8</button>
         <button class="btns dig-btns" id="9">9</button>
-        <button class="btns calc-btns" id="divide">%</button>
+        <button class="btns calc-btns" id="divide">/</button>
         <button class="btns dig-btns" id="4">4</button>
         <button class="btns dig-btns" id="5">5</button>
         <button class="btns dig-btns" id="6">6</button>
@@ -21,7 +22,7 @@
         <button class="btns dig-btns" id="1">1</button>
         <button class="btns dig-btns" id="2">2</button>
         <button class="btns dig-btns" id="3">3</button>
-        <button class="btns calc-btns" id="substract">-</button>
+        <button class="btns calc-btns" id="subtract">-</button>
         <button class="btns dig-btns" id="0">0</button>
         <button class="btns dig-btns" id="comma">.</button>
         <button class="btns" id="operator">=</button>
