--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <button class="btns calc-btns" id="subtract">-</button>
         <button class="btns dig-btns" id="0">0</button>
         <button class="btns dig-btns" id="comma">.</button>
-        <button class="btns" id="operator">=</button>
+        <button class="btns operator-btn" id="operator">=</button>
         <button class="btns calc-btns" id="add">+</button>
       </div>
     </div>
