--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
   <body>
     <div class="container">
       <div class="display"></div>
-      <button class="btns clr-btn" id="clear">CLEAR</button>
+      <div class="clear-back">
+        <button class="btns clr-btn" id="clear">CLEAR</button>
+        <button class="btns backspace" id="backspace">BACKSPACE</button>
+      </div>
       <div class="btns-container">
         <button class="btns dig-btns" id="7">7</button>
         <button class="btns dig-btns" id="8">8</button>
