--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
         <button class="btns backspace" id="backspace">BACKSPACE</button>
       </div>
       <div class="btns-container">
-        <button class="btns dig-btns" id="7">7</button>
-        <button class="btns dig-btns" id="8">8</button>
-        <button class="btns dig-btns" id="9">9</button>
+        <button class="btns dig-btns" id="seven" value="7">7</button>
+        <button class="btns dig-btns" id="eight" value="8">8</button>
+        <button class="btns dig-btns" id="nine" value="9">9</button>
         <button class="btns calc-btns" id="divide">/</button>
-        <button class="btns dig-btns" id="4">4</button>
-        <button class="btns dig-btns" id="5">5</button>
-        <button class="btns dig-btns" id="6">6</button>
-        <button class="btns calc-btns" id="multiply">x</button>
-        <button class="btns dig-btns" id="1">1</button>
-        <button class="btns dig-btns" id="2">2</button>
-        <button class="btns dig-btns" id="3">3</button>
+        <button class="btns dig-btns" id="four" value="4">4</button>
+        <button class="btns dig-btns" id="five" value="5">5</button>
+        <button class="btns dig-btns" id="six" value="6">6</button>
+        <button class="btns calc-btns" id="multiply">*</button>
+        <button class="btns dig-btns" id="one" value="1">1</button>
+        <button class="btns dig-btns" id="two" value="2">2</button>
+        <button class="btns dig-btns" id="three" value="3">3</button>
         <button class="btns calc-btns" id="subtract">-</button>
-        <button class="btns dig-btns" id="0">0</button>
+        <button class="btns dig-btns" id="zero" value="0">0</button>
         <button class="btns dig-btns" id="comma">.</button>
         <button class="btns operator-btn" id="operator">=</button>
         <button class="btns calc-btns" id="add">+</button>
